--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,6 +1,3 @@
-@import './game-area.css';
-@import './fake-mobile-input.css';
-
 html, body {
     margin: 0;
     padding: 0;
@@ -8,6 +5,51 @@ html, body {
     height: 100%;
 }
 
-.hidden {
-	display: none;
+.fake-mobile-input {
+    height: 0.2px;
+    border: none;
+    transform: translateX(-9999px);
 }
+
+.game-area {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+
+    margin: auto;
+    height: 100%;
+    max-width: 480px;
+}
+
+.game-area__logo {
+    height: 48px;
+    user-select: none;
+    pointer-events: none;
+}
+
+.game-area__h2 {
+    text-align: center;
+    font-family: 'Arvo', serif;
+    margin-bottom: 0;
+}
+
+.game-area__rules,
+.game-area__buttons {
+    text-align: center;
+    font-family: 'Arvo', serif;
+}
+
+.game-area__word {
+    display: flex;
+    justify-content: center;
+}
+
+.game-area__mistakes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    min-height: 40px;
+    margin-bottom: 16px;
+}
+
